--- a/app/src/cccamp2019/res/xml/track_resource_names.xml
+++ b/app/src/cccamp2019/res/xml/track_resource_names.xml
@@ -2,13 +2,13 @@
 <map linked="true">
     <entry key="Art &amp; Culture">art_culture</entry>
     <entry key="CCC">ccc</entry>
-    <entry key="Entertainment">entertainment</entry>
+    <entry key="Other">entertainment</entry>
     <entry key="Ethics, Society &amp; Politics">ethics_society_politics</entry>
-    <entry key="Hardware &amp; Making">hardware_making</entry>
+    <entry key="Workshop">hardware_making</entry>
     <entry key="Music">music</entry>
-    <entry key="Science">science</entry>
-    <entry key="Security">security</entry>
-    <entry key="self organized sessions">sos</entry>
+    <entry key="Talks">science</entry>
+    <entry key="Panel">security</entry>
+    <entry key="Lightning Talks">sos</entry>
     <entry key="Talk">talk</entry>
     <entry key="Workshop">workshop</entry>
     <entry key="">other</entry>
